# tfwh

./: LICENSE  README.md  tfwh.cabal
src/Chapter1/: CommonWords.hs  Convert.hs  Exercise.hs
src/Chapter2/: CWords.hs  Exercise.hs
src/Chapter3/: BinarySearchFloor.hs  Exercise.hs  Floor.hs  Nat.hs
src/Chapter4/: CommonWords.hs  Exercise.hs  Triads.hs  Zip.hs
src/Chapter5/: Exercise.hs  Sudoku.hs
