name:                tfwh
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/shengc/tfwh#readme
license:             BSD3
license-file:        LICENSE
author:              Sheng Chen
maintainer:          shengcer@gmail.com
copyright:           Copyright (c) 2018- Sheng Chen
category:            programming
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable tfwh
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, filepath
